{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 412,
  "lineage": "7c2a85bc-8ebd-170e-cf1c-437803f77cd8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "internal_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-internal-nic",
            "internal_domain_name_suffix": "54s5dazr5gfe3omsez4nq1rmnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_nic_configuration",
                "primary": true,
                "private_ip_address": "172.20.2.50",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_plus1",
                "primary": false,
                "private_ip_address": "172.20.2.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus1_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_plus2",
                "primary": false,
                "private_ip_address": "172.20.2.101",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus2_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_plus3",
                "primary": false,
                "private_ip_address": "172.20.2.102",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus3_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_oss1",
                "primary": false,
                "private_ip_address": "172.20.2.103",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss1_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_oss2",
                "primary": false,
                "private_ip_address": "172.20.2.104",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss2_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_oss3",
                "primary": false,
                "private_ip_address": "172.20.2.105",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss3_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              },
              {
                "name": "internal_nic_waf_test",
                "primary": false,
                "private_ip_address": "172.20.2.106",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-waf-test_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "ubuntu-internal-nic",
            "private_ip_address": "172.20.2.50",
            "private_ip_addresses": [
              "172.20.2.50",
              "172.20.2.100",
              "172.20.2.101",
              "172.20.2.102",
              "172.20.2.103",
              "172.20.2.104",
              "172.20.2.105",
              "172.20.2.106"
            ],
            "resource_group_name": "gkulland-nginx-one",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "ubuntu-internal-nic",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b"
          },
          "dependencies": [
            "azurerm_public_ip.oss1",
            "azurerm_public_ip.oss2",
            "azurerm_public_ip.oss3",
            "azurerm_public_ip.plus1",
            "azurerm_public_ip.plus2",
            "azurerm_public_ip.plus3",
            "azurerm_public_ip.waf-test",
            "azurerm_resource_group.rg",
            "azurerm_subnet.int",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "management_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-management-nic",
            "internal_domain_name_suffix": "54s5dazr5gfe3omsez4nq1rmnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "managenment_nic_configuration",
                "primary": true,
                "private_ip_address": "172.20.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-management_pubip",
                "subnet_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/management"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "ubuntu-management-nic",
            "private_ip_address": "172.20.0.4",
            "private_ip_addresses": [
              "172.20.0.4"
            ],
            "resource_group_name": "gkulland-nginx-one",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "ubuntu-management-nic",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b"
          },
          "dependencies": [
            "azurerm_public_ip.management_pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-internal-nic|/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-internal-NSG",
            "network_interface_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-internal-nic",
            "network_security_group_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-internal-NSG"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.internal_nic",
            "azurerm_network_security_group.internal_nsg",
            "azurerm_public_ip.oss1",
            "azurerm_public_ip.oss2",
            "azurerm_public_ip.oss3",
            "azurerm_public_ip.plus1",
            "azurerm_public_ip.plus2",
            "azurerm_public_ip.plus3",
            "azurerm_public_ip.waf-test",
            "azurerm_resource_group.rg",
            "azurerm_subnet.int",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-management-nic|/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-mgmt-NSG",
            "network_interface_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkInterfaces/ubuntu-management-nic",
            "network_security_group_id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-mgmt-NSG"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.management_nic",
            "azurerm_network_security_group.management_nsg",
            "azurerm_public_ip.management_pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-internal-NSG",
            "location": "westus2",
            "name": "ubuntu-internal-NSG",
            "resource_group_name": "gkulland-nginx-one",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80",
                  "9000",
                  "9113"
                ],
                "direction": "Inbound",
                "name": "External-Access",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "104.219.105.84/32",
                  "104.219.107.84/32",
                  "162.220.44.18/32",
                  "200.94.108.146/32",
                  "65.61.116.107/32",
                  "67.139.111.130",
                  "67.185.28.238",
                  "73.11.176.78"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "ubuntu-internal-NSG",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "management_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/networkSecurityGroups/ubuntu-mgmt-NSG",
            "location": "westus2",
            "name": "ubuntu-mgmt-NSG",
            "resource_group_name": "gkulland-nginx-one",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "SSH-WebUI",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "104.219.105.84/32",
                  "104.219.107.84/32",
                  "162.220.44.18/32",
                  "200.94.108.146/32",
                  "65.61.116.107/32",
                  "67.139.111.130",
                  "67.185.28.238",
                  "73.11.176.78"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "ubuntu-mgmt-NSG",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "management_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-management_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.55.93",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-management_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "oss1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss1_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.99.120",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-oss1_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "oss2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss2_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.236.200",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-oss2_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "oss3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-oss3_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.205.41",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-oss3_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "plus1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus1_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.114.53.122",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-plus1_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "plus2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus2_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.54.198",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-plus2_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "plus3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-plus3_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.218.39",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-plus3_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "waf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/publicIPAddresses/ubuntu-waf-test_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.54.152",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ubuntu-waf-test_pubip",
            "resource_group_name": "gkulland-nginx-one",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "email": "g.kulland@f5.com",
              "owner": "Gage Kulland"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.20.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/external",
            "name": "external",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "gkulland-nginx-one",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "external",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.20.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "gkulland-nginx-one",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "internal",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.20.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet/subnets/management",
            "name": "management",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "gkulland-nginx-one",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "management",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b",
            "virtual_network_name": "kulland-nginx-one-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "83f1a5ff-f931-4e8a-b992-267cd86e2c6a",
            "id": "/subscriptions/4bd08e66-f1da-40f0-9de0-237567f7e61b/resourceGroups/gkulland-nginx-one/providers/Microsoft.Network/virtualNetworks/kulland-nginx-one-vnet",
            "location": "westus2",
            "name": "kulland-nginx-one-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "gkulland-nginx-one"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "kulland-nginx-one-vnet",
            "resource_group_name": "gkulland-nginx-one",
            "subscription_id": "4bd08e66-f1da-40f0-9de0-237567f7e61b"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}